--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require": {
         "cboden/ratchet": "^0.4.4"
+    },
+    "scripts": {
+        "start": [
+            "php backend/chatserver.php"
+        ]
     }
 }
